--- a/package.json
+++ b/package.json
@@ -2,9 +2,24 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@rails/actioncable": "latest",
     "@rails/activestorage": "latest",
     "@rails/webpacker": "^6.0.0-rc.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.1.2",
+    "mini-css-extract-plugin": "^2.4.4",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-on-rails": "12.4.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.4.4",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   },
@@ -18,7 +33,10 @@
     "defaults"
   ],
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "@webpack-cli/serve": "^1.6.0",
+    "fork-ts-checker-webpack-plugin": "^6.4.0",
+    "react-refresh": "^0.10.0",
     "webpack-dev-server": "^4.4.0"
   }
 }
